Add functionality to calculator

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
             <div class="buttons">
                 <div class="row">
-                    <button id="btn_ac" class="button clear">AC</button>
-                    <button id="btn_ce" class="button clear">CE</button>
+                    <button id="btn_ac" class="button clear" title="All Clear: removes every input">AC</button>
+                    <button id="btn_ce" class="button clear" title="Clear Entry: removes the last input">CE</button>
                 </div>
                 <div class="row">
                     <button class="button digit">7</button>
@@ -42,8 +42,8 @@
                 </div>
                 <div class="row">
                     <button class="button digit">0</button>
-                    <button class="button digit">.</button>
-                    <button class="button equals">=</button>
+                    <button class="button dot">.</button>
+                    <button id="btn_equals" class="button equals">=</button>
                     <button class="button operator">+</button>
                 </div>
             </div>
